Bug 1553262 - Ignore removing video tracks for streams that only capture audio. r=jib

Video tracks are not added to output streams that capture only audio, so we
cannot assume that an output stream that captures only audio has been locked to
capture MediaStream sources when a video track is removed.

Depends on D34854

Differential Revision: https://phabricator.services.mozilla.com/D34855